[package]
name = "tumblr-api-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
tumblr-api = { git = "https://github.com/RyanThePinkHacker/tumblr-api-rs", rev = "9030a465adf44dbba01a1e0367edf5d247df3a63" }
