[package]
name = "tumblr-api-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-string = "0.1.0"
load_image = "3.0.3"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
tumblr-api = { git = "https://github.com/RyanThePinkHacker/tumblr-api-rs", rev = "c6a360c132df8627494943667102d9acea6d73e8" }
